# graph

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: main.yml
GraphsLib/: CMakeLists.txt
GraphsLib/include/: ArcGraph.h  IGraph.h  ListGraph.h  MatrixGraph.h  SetGraph.h
GraphsLib/src/: ArcGraph.cpp  ListGraph.cpp  MatrixGraph.cpp  SetGraph.cpp
